--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "Node.js APIs to IBM® Z Open Automation Utilitis (ZAU)",
   "main": "index.js",
-  "scripts": {
-    "build": "node-gyp build"
-  },
   "repository": "ibmruntimes/node-zoau",
   "keywords": [
     "zos",
@@ -14,9 +11,5 @@
     "zoau"
   ],
   "author": "IBM",
-  "license": "Apache-2.0",
-  "dependencies": {
-    "bindings": "^1.5.0",
-    "node-addon-api": "^3.0.2"
-  }
+  "license": "Apache-2.0"
 }
