--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-zoau",
   "version": "0.0.1",
   "description": "Node.js APIs to IBM® Z Open Automation Utilitis (ZAU)",
+  "engines" : {
+    "node" : ">=14.15.1"
+  },
   "main": "index.js",
   "scripts": {
     "test": "mocha"
