--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "zoau"
   ],
   "author": "IBM",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "mocha": "^8.2.1"
+  }
 }
