--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "postinstall": "node postinstall.js",
     "test": "mocha"
   },
   "repository": "ibmruntimes/node-zoau",
