--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,37 +1,33 @@
-name: Bug report
-description: File a bug report
+name: "\U0001F41B Bug report"
+description: Create a report to help us improve
 body:
   - type: markdown
     attributes:
       value: |
-        Before opening a bug report, please search for the behaviour in the existing issues. 
-        
-        ---
-        
-        Thank you for taking the time to file a bug report. To address this bug as fast as possible, we need some information.
+        Thank you for reporting an issue.
+
+        This issue tracker is for bugs and issues found within Node.js core.
+        If you require more general support please file an issue on our help repo. https://github.com/nodejs/help
+
+        Please fill in as much of the form below as you're able.
   - type: input
     attributes:
-      label: Node.js Version
+      label: Version
       description: Output of `node -v`
-  - type: input
-    attributes:
-      label: ZOAU version
-      description: |
-        output of `zoaversion`
-  - type: input
-    attributes:
-      label: zoau-node version
-      description: |
-        version of zoau-node installed
   - type: input
     attributes:
       label: Platform
       description: |
-        output of `uname -a`
+        UNIX: output of `uname -a`
+        Windows: output of `"$([Environment]::OSVersion | ForEach-Object VersionString) $(if ([Environment]::Is64BitOperatingSystem) { "x64" } else { "x86" })"` in PowerShell console
+  - type: input
+    attributes:
+      label: Subsystem
+      description: If known, please specify affected core module name
   - type: textarea
     attributes:
       label: What steps will reproduce the bug?
-      description: Enter details about your bug, preferably a simple code snippet.
+      description: Enter details about your bug, preferably a simple code snippet that can be run using `node` directly without installing third-party dependencies.
   - type: textarea
     attributes:
       label: How often does it reproduce? Is there a required condition?
