--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,4 +1,4 @@
-name: "ZOAU-Node Bug report"
+name: "ZOAU Node Bug report"
 description: Create a report to help us improve
 body:
   - type: markdown
