--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -11,6 +11,11 @@ body:
         Please fill in as much of the form below as you're able.
   - type: input
     attributes:
+      label: zoau-node version
+      description: |
+        version of zoau-node installed
+  - type: input
+    attributes:
       label: Node.js Version
       description: Output of `node -v`
   - type: input
@@ -20,12 +25,7 @@ body:
         output of `zoaversion`
   - type: input
     attributes:
-      label: zoau-node version
-      description: |
-        version of zoau-node installed
-  - type: input
-    attributes:
-      label: Platform
+      label: Platform Information
       description: |
         output of `uname -a`
   - type: textarea
